# ml-superposition-prompting

./: .gitmodules  ACKNOWLEDGEMENTS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh  transformers.patch
flows/lost_in_the_middle/: example_run.sh  main.py  setup.sh
flows/lost_in_the_middle/configs/: attention_sort.yaml  attenuation.yaml  baselines.yaml  flattening.yaml  pos_assignment.yaml  pos_rounding.yaml  prompt_cache.yaml  topk.yaml
flows/lost_in_the_middle/data/: files.txt
flows/lost_in_the_middle/src/: config.py  datasets.py  evaluate.py  prefilter.py  prompting.py
flows/musique/: example_run.sh  main.py  setup.sh
flows/musique/configs/: attention_sort.yaml  main.yaml  naive.yaml  prompt_cache.yaml  topk.yaml
test/: test_superposition_prompt.sh
